// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render (disapled) button when we apply disapled 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       undefined"
  disabled={true}
  type="button"
>
  Button
</button>
`;

exports[`Button component should render (large) button when we apply (large) 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Button component should render (lefticon) button when we apply lefticon 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       "
  disabled={false}
  type="button"
>
  <svg
    className="inline-block
          undefined
          undefined
           "
    data-file-name="SvgButtonArowDown"
    height="16"
    width="16"
  />
  Button
</button>
`;

exports[`Button component should render (meduim) button when we apply (meduim) 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Button component should render (onlyicon)  button when we apply nothing 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       "
  disabled={false}
  type="button"
>
  <svg
    className="inline-block
            
            undefined
             "
    data-file-name="SvgButtonArowDown"
    height="24"
    width="24"
  />
</button>
`;

exports[`Button component should render (primary) button when we apply primary 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Button component should render (righticon) button when we apply righticon 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim
       "
  disabled={false}
  type="button"
>
  Button
  <svg
    className="inline-block
           
           undefined
            "
    data-file-name="SvgButtonArowDown"
    height="16"
    width="16"
  />
</button>
`;

exports[`Button component should render (secondary) button when we apply (secondary) 1`] = `
<button
  className="
       undefined
       
       font-meduim
       "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Button component should render (small) button when we apply (small) 1`] = `
<button
  className="
       undefined
       undefined
       font-meduim undefined
       "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Button component should render (text) button when we apply text 1`] = `
<button
  className="
       undefined
       
       font-meduim
       "
  disabled={false}
  type="button"
>
  Button
</button>
`;
